# resolvo

./: .gitignore  CHANGELOG.md  Cargo.toml  HANDOFF-assertion-watermark.md  HANDOFF-luby-restarts.md  timings.csv
.github/chainguard/: write.sts.yaml
cpp/: CMakeLists.txt  Cargo.toml  build.rs
cpp/include/: resolvo.h  resolvo_dependency_provider.h  resolvo_string.h  resolvo_vector.h
cpp/src/: lib.rs  string.rs  vector.rs
cpp/tests/: CMakeLists.txt  solve.cpp  string.cpp  vector.cpp
docs/: virtual-sibling-negations.md
docs/design/: assertion-watermark.md  cdcl-modernization.md  decide-worklist.md  mainline-techniques-handoff.md  night2-integration.md  outlier-forensics.md  universal-env-literals-last.md  universal-refutation-ordering.md  universal-solve-benchmark.md  universal-solve.md  universal-trail-reuse.md
examples/: sudoku.rs
src/: conflict.rs  conflict_v2.rs  extra.rs  extras.rs  lib.rs  requirement.rs  snapshot.rs
src/internal/: id.rs  mapping.rs  mod.rs
src/solver/: assertion_scans.rs  assertion_watermark.rs  at_most_one.rs  binary_encoding.rs  cache.rs  clause.rs  commander_encoding.rs  conditions.rs  decide_queue.rs  decision.rs  decision_map.rs  decision_tracker.rs  diagnostics.rs  encoding.rs  env_test_provider.rs  mod.rs  universal.rs  universal_prop.rs  variable_map.rs  watch_map.rs
src/solver/snapshots/: resolvo__solver__at_most_one__test__at_most_once_tracker.snap  resolvo__solver__at_most_one__test__at_most_once_tracker_bimander.snap  resolvo__solver__at_most_one__test__at_most_once_tracker_commander.snap  resolvo__solver__at_most_one__test__at_most_once_tracker_hybrid.snap  resolvo__solver__at_most_one__test__at_most_once_tracker_pairwise.snap  resolvo__solver__at_most_one__test__at_most_once_tracker_sequential.snap  resolvo__solver__commander_encoding__test__at_most_once_tracker.snap
src/utils/: mapping.rs  pool.rs
tests/solver/: .main.rs.pending-snap  main.rs
tests/solver/bundle_box/: mod.rs  parser.rs  spec.rs
tools/amo-bench/: Cargo.toml  README.md
tools/amo-bench/src/: main.rs
tools/solve-snapshot/: inspect_snapshot.py  timing_comparison.ipynb
tools/solve-snapshot/models/: model-win-64.json  (+5 more)
(+15 files in other folders)
