[package]
name = "resolvo_cpp"
description = "Resolvo C++ integration"
version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish = false

# prefix used to convey path to generated includes to the C++ test driver
links = "resolvo_cpp"

[dependencies]
resolvo = { path = "../" }

[build-dependencies]
anyhow = "1"
cbindgen = "0.26.0"