[package]
name = "amo-bench"
version = "0.1.0"
edition = "2024"
publish = false

[features]
diagnostics = ["resolvo/diagnostics"]

[dependencies]
resolvo = { path = "../.." }
clap = { version = "4.5", features = ["derive"] }
rand = "0.9.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
